--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "${PROJECT_NAME}",
+  "name": "douyinfix-url-download",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true
+  "private": true,
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "axios": "^1.6.2",
+    "cheerio": "^1.1.2",
+    "puppeteer": "^24.24.1"
+  }
 }
